--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "dev": "nodemon index.js",
     "test": "echo \"Error: no test specified\" && exit 1",
     "build:ui": "rm -rf dist && cd ../Full_Stack_Open/part2/phonebook && npm run build && cp -r dist ../../../phonebook/",
-    "deploy:full": "npm run build:ui  && git add . && git commit -m 'Commit build before deploy' && git push"
+    "deploy:full": "npm run build:ui && git add . && git commit -m 'Commit before deploy' && git push"
   },
   "author": "Ajay KC",
   "license": "ISC",
